Remove incompatible log4j between surefire plugins and the rest. Also, cleaned up and suppressed warnings, to figure out real mvn issues more easily